--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
   <form class="form-wrapper" id="multiForm" novalidate>
     <div class="logo-container">
-      <img src="img/LOGO GRUPO NEGRO.png" alt="Logo SSPI">
+      <img src="LOGO GRUPO NEGRO.png" alt="Logo SSPI">
     </div>
 
     <h1>Formulario de Contratación</h1>
@@ -657,5 +657,6 @@
  
 </body>
 </html>
+
 
 
