--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
         <div class="half">
           <label class="required">Inglés Escrito</label>
-          <select name="InglesEscrito"> required>
+          <select name="InglesEscrito" required>
             <option value="">Seleccione...</option>
             <option>Principiante</option><option>Básico</option>
             <option>Intermedio</option><option>Avanzado</option>
@@ -689,6 +689,7 @@
 
 </body>
 </html>
+
 
 
 
